# user-service

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  test.db
.github/workflows/: build.yaml  tollgate.yaml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  database.py  main.py  models.py  schemas.py
app/graphql/: __init__.py  resolvers.py  schema.py
app/routers/: users.py
tests/: conftest.py  test_graphql.py  test_users.py
