[tool.poetry]
name = "user-service"
version = "0.1.0"
description = "User Profile Service — stores user data (addresses, preferences) linked to Keycloak IDs"
authors = ["Your Name <you@example.com>"]
license = ""
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
