[tool.poetry]
name = "user-service"
version = "0.2.0"
description = "User Profile Service — stores user data (addresses, preferences) linked to Keycloak IDs"
authors = ["Your Name <you@example.com>"]
license = ""
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = "^2.0.48"
psycopg2-binary = "^2.9.11"
pydantic-settings = "^2.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pylint (>=4.0.5,<5.0.0)"
]
